--- a/MTL-E/test_acc.ipynb
+++ b/MTL-E/test_acc.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,17 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define which model are you testing\n",
-    "model_name = \"bert-large-uncased\""
+    "model_name = \"albert-xxlarge-v2\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,16 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3145826/1288519749.py:11: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_3466313/1288519749.py:11: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  state_dict=torch.load(model_path)\n",
-      "/tmp/ipykernel_3145826/1288519749.py:11: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_3466313/1288519749.py:11: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  state_dict=torch.load(model_path)\n"
      ]
     },
@@ -146,59 +146,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                              Sentence  identity_attack_x  \\\n",
-      "0     As someone pointed out earlier ISIS and radic...           0.800000   \n",
-      "1     URL bellamycharlottesvilletwitter  Read up on...           0.506024   \n",
-      "2    . . .  she wants to give other women of color ...           0.500000   \n",
-      "3    . The whole world hates the white world yet th...           0.500000   \n",
-      "4    ... what horrible human beings .... pathetic. ...           0.653333   \n",
-      "..                                                 ...                ...   \n",
-      "645  Youre right he should pick something else to b...           0.500000   \n",
-      "646  Youre right the international condemnation of ...           0.700000   \n",
-      "647  Youre the one making claims.  I called you on ...           0.600000   \n",
-      "648  Youre white so clearly you dont understand or ...           0.800000   \n",
-      "649  Yup I keep telling people people like you are ...           0.636364   \n",
+      "                                              Sentence  labels  \\\n",
+      "0    As the Black Lives Matter movement grows, comp...       0   \n",
+      "1    The case of Rahaf Mohammed al-Qunun drawn new ...       0   \n",
+      "2    The Post said the talks on payroll taxes were ...       0   \n",
+      "3    Nearly 78 percent of Americans report experien...       0   \n",
+      "4    Colin P. Clarke has been teaching a course on ...       0   \n",
+      "..                                                 ...     ...   \n",
+      "995  Monday for his show’s opening monologue, Fox N...       1   \n",
+      "996  Under the changes, all military style semi-aut...       0   \n",
+      "997  The idea of imposing a wealth tax on the riche...       0   \n",
+      "998  The poisonings come more than five months into...       0   \n",
+      "999  So you have the New York Times, the Tax Policy...       1   \n",
       "\n",
-      "     labels          target       category  \\\n",
-      "0         1  muslims,whites  religion,race   \n",
-      "1         0             NaN           none   \n",
-      "2         1          whites    race,gender   \n",
-      "3         1          whites           race   \n",
-      "4         1      christians       religion   \n",
-      "..      ...             ...            ...   \n",
-      "645       1          whites           race   \n",
-      "646       1            jews       religion   \n",
-      "647       1            gays          lgbtq   \n",
-      "648       1          whites           race   \n",
-      "649       1          blacks           race   \n",
+      "                 topic    id  \n",
+      "0    marriage-equality     1  \n",
+      "1               gender     2  \n",
+      "2                taxes     3  \n",
+      "3          environment     4  \n",
+      "4    white-nationalism     5  \n",
+      "..                 ...   ...  \n",
+      "995  marriage-equality   996  \n",
+      "996        gun-control   997  \n",
+      "997       middle-class   998  \n",
+      "998              islam   999  \n",
+      "999              taxes  1000  \n",
       "\n",
-      "                                rationale   id  \n",
-      "0    prejudice against whites and muslims    1  \n",
-      "1                                     NaN    2  \n",
-      "2             prejudice against white men    3  \n",
-      "3                prejudice against whites    4  \n",
-      "4            prejudice against christians    5  \n",
-      "..                                    ...  ...  \n",
-      "645              prejudice against whites  646  \n",
-      "646                prejudice against jews  647  \n",
-      "647                prejudice towards gays  648  \n",
-      "648              prejudice against whites  649  \n",
-      "649              prejudice against blacks  650  \n",
-      "\n",
-      "[650 rows x 7 columns]\n",
-      "Evaluating bias model...\n",
+      "[1000 rows x 4 columns]\n",
+      "Evaluating bias_2 model...\n",
       "---------------------------------Confusion Matrix------------------------------------\n",
-      "    0    1\n",
-      "0  43   88\n",
-      "1  54  465\n",
+      "     0    1\n",
+      "0  394   47\n",
+      "1  102  457\n",
       "---------------------------------Evaluation Metrics------------------------------------\n",
-      "              precision    recall  f1-score     support\n",
-      "0              0.443299  0.328244  0.377193  131.000000\n",
-      "1              0.840868  0.895954  0.867537  519.000000\n",
-      "accuracy       0.781538  0.781538  0.781538    0.781538\n",
-      "macro avg      0.642083  0.612099  0.622365  650.000000\n",
-      "weighted avg   0.760743  0.781538  0.768714  650.000000\n",
-      "Results saved to ./results/bias_bert-large-uncased_results.csv\n",
+      "              precision    recall  f1-score   support\n",
+      "0              0.794355  0.893424  0.840982   441.000\n",
+      "1              0.906746  0.817531  0.859831   559.000\n",
+      "accuracy       0.851000  0.851000  0.851000     0.851\n",
+      "macro avg      0.850550  0.855478  0.850406  1000.000\n",
+      "weighted avg   0.857182  0.851000  0.851518  1000.000\n",
+      "Results saved to ./results/bias_2_roberta-large_results.csv\n",
       "                                               Sentence  labels    id\n",
       "0                             She hailed Mother Russia.       1     1\n",
       "1     The mover will be here soon. They don't really...       1     2\n",
@@ -216,29 +203,29 @@
       "Evaluating stereotype model...\n",
       "---------------------------------Confusion Matrix------------------------------------\n",
       "     0    1\n",
-      "0  723   85\n",
-      "1  114  777\n",
+      "0  745   63\n",
+      "1   61  830\n",
       "---------------------------------Evaluation Metrics------------------------------------\n",
       "              precision    recall  f1-score      support\n",
-      "0              0.863799  0.894802  0.879027   808.000000\n",
-      "1              0.901392  0.872054  0.886480   891.000000\n",
-      "accuracy       0.882872  0.882872  0.882872     0.882872\n",
-      "macro avg      0.882596  0.883428  0.882754  1699.000000\n",
-      "weighted avg   0.883514  0.882872  0.882936  1699.000000\n",
-      "Results saved to ./results/stereotype_bert-large-uncased_results.csv\n"
+      "0              0.924318  0.922030  0.923172   808.000000\n",
+      "1              0.929451  0.931538  0.930493   891.000000\n",
+      "accuracy       0.927016  0.927016  0.927016     0.927016\n",
+      "macro avg      0.926884  0.926784  0.926833  1699.000000\n",
+      "weighted avg   0.927010  0.927016  0.927012  1699.000000\n",
+      "Results saved to ./results/stereotype_roberta-large_results.csv\n"
      ]
     }
    ],
    "source": [
     "# Load models\n",
-    "bias_model, bias_tokenizer = load_model(model_name, \"bias\")\n",
+    "bias_model, bias_tokenizer = load_model(model_name, \"bias_2\")\n",
     "stereotype_model, stereotype_tokenizer = load_model(model_name, \"stereotype\")\n",
     "\n",
     "# Evaluate models\n",
-    "for task_name, model, tokenizer in [(\"bias\", bias_model, bias_tokenizer), (\"stereotype\", stereotype_model, stereotype_tokenizer)]:\n",
+    "for task_name, model, tokenizer in [(\"bias_2\", bias_model, bias_tokenizer), (\"stereotype\", stereotype_model, stereotype_tokenizer)]:\n",
     "    # Load test data\n",
     "    #Give path to test data\n",
-    "    test_csv_path = \"Dataset/StereoSet/test.csv\" if task_name=='stereotype' else \"Dataset/ToxicBias/test.csv\"\n",
+    "    test_csv_path = \"Dataset/StereoSet/test.csv\" if task_name=='stereotype' else \"Dataset/BABE/test.csv\"\n",
     "    test_data = load_test_data(test_csv_path)\n",
     "    print(f\"Evaluating {task_name} model...\")\n",
     "    conf_matrix, class_report = evaluate_model(model, tokenizer, test_data, task_name)\n",
@@ -257,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/pushpak/aditya/Bias-Stereotype-MTL/STL-MTL/MTL-E\n"
+      "/home/pushpak/aditya/New/MTL-E\n"
      ]
     },
     {
