--- a/MTL-E/test_acc.ipynb
+++ b/MTL-E/test_acc.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pushpak/aditya/miniforge3/envs/lmharness/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/data/nlp/aditya/miniforge3/envs/lmharness/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define which model are you testing\n",
-    "model_name = \"albert-xxlarge-v2\""
+    "model_name = \"bert-large-uncased\""
    ]
   },
   {
@@ -56,11 +56,11 @@
    "source": [
     "def load_model(model_name, task_name):\n",
     "    # Load the configuration\n",
-    "    config_path = f\"{task_name}_model/{model_name}/config.json\"\n",
+    "    config_path = f\"MTL-E/{task_name}_model/{model_name}/config.json\"\n",
     "    config = transformers.AutoConfig.from_pretrained(config_path)\n",
     "\n",
     "    # Load the model state dict\n",
-    "    model_path = f\"{task_name}_model/{model_name}/pytorch_model.bin\"\n",
+    "    model_path = f\"MTL-E/{task_name}_model/{model_name}/pytorch_model.bin\"\n",
     "    model = transformers.AutoModelForSequenceClassification.from_pretrained(\n",
     "        pretrained_model_name_or_path=None,\n",
     "        config=config,\n",
@@ -68,7 +68,7 @@
     "    )\n",
     "\n",
     "    # Load the tokenizer\n",
-    "    tokenizer = transformers.AutoTokenizer.from_pretrained(f\"{task_name}_model/{model_name}\")\n",
+    "    tokenizer = transformers.AutoTokenizer.from_pretrained(f\"MTL-E/{task_name}_model/{model_name}\")\n",
     "\n",
     "    return model, tokenizer\n"
    ]
@@ -136,9 +136,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3466313/1288519749.py:11: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_87208/3601068973.py:11: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  state_dict=torch.load(model_path)\n",
-      "/tmp/ipykernel_3466313/1288519749.py:11: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/tmp/ipykernel_87208/3601068973.py:11: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  state_dict=torch.load(model_path)\n"
      ]
     },
@@ -146,86 +146,112 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                              Sentence  labels  \\\n",
-      "0    As the Black Lives Matter movement grows, comp...       0   \n",
-      "1    The case of Rahaf Mohammed al-Qunun drawn new ...       0   \n",
-      "2    The Post said the talks on payroll taxes were ...       0   \n",
-      "3    Nearly 78 percent of Americans report experien...       0   \n",
-      "4    Colin P. Clarke has been teaching a course on ...       0   \n",
-      "..                                                 ...     ...   \n",
-      "995  Monday for his show’s opening monologue, Fox N...       1   \n",
-      "996  Under the changes, all military style semi-aut...       0   \n",
-      "997  The idea of imposing a wealth tax on the riche...       0   \n",
-      "998  The poisonings come more than five months into...       0   \n",
-      "999  So you have the New York Times, the Tax Policy...       1   \n",
+      "                                              Sentence  identity_attack_x  \\\n",
+      "0     As someone pointed out earlier ISIS and radic...           0.800000   \n",
+      "1     URL bellamycharlottesvilletwitter  Read up on...           0.506024   \n",
+      "2    . . .  she wants to give other women of color ...           0.500000   \n",
+      "3    . The whole world hates the white world yet th...           0.500000   \n",
+      "4    ... what horrible human beings .... pathetic. ...           0.653333   \n",
+      "..                                                 ...                ...   \n",
+      "645  Youre right he should pick something else to b...           0.500000   \n",
+      "646  Youre right the international condemnation of ...           0.700000   \n",
+      "647  Youre the one making claims.  I called you on ...           0.600000   \n",
+      "648  Youre white so clearly you dont understand or ...           0.800000   \n",
+      "649  Yup I keep telling people people like you are ...           0.636364   \n",
       "\n",
-      "                 topic    id  \n",
-      "0    marriage-equality     1  \n",
-      "1               gender     2  \n",
-      "2                taxes     3  \n",
-      "3          environment     4  \n",
-      "4    white-nationalism     5  \n",
-      "..                 ...   ...  \n",
-      "995  marriage-equality   996  \n",
-      "996        gun-control   997  \n",
-      "997       middle-class   998  \n",
-      "998              islam   999  \n",
-      "999              taxes  1000  \n",
+      "     labels          target       category  \\\n",
+      "0         1  muslims,whites  religion,race   \n",
+      "1         0             NaN           none   \n",
+      "2         1          whites    race,gender   \n",
+      "3         1          whites           race   \n",
+      "4         1      christians       religion   \n",
+      "..      ...             ...            ...   \n",
+      "645       1          whites           race   \n",
+      "646       1            jews       religion   \n",
+      "647       1            gays          lgbtq   \n",
+      "648       1          whites           race   \n",
+      "649       1          blacks           race   \n",
       "\n",
-      "[1000 rows x 4 columns]\n",
-      "Evaluating bias_2 model...\n",
+      "                                rationale   id  \n",
+      "0    prejudice against whites and muslims    1  \n",
+      "1                                     NaN    2  \n",
+      "2             prejudice against white men    3  \n",
+      "3                prejudice against whites    4  \n",
+      "4            prejudice against christians    5  \n",
+      "..                                    ...  ...  \n",
+      "645              prejudice against whites  646  \n",
+      "646                prejudice against jews  647  \n",
+      "647                prejudice towards gays  648  \n",
+      "648              prejudice against whites  649  \n",
+      "649              prejudice against blacks  650  \n",
+      "\n",
+      "[650 rows x 7 columns]\n",
+      "Evaluating bias model...\n",
       "---------------------------------Confusion Matrix------------------------------------\n",
-      "     0    1\n",
-      "0  394   47\n",
-      "1  102  457\n",
+      "    0    1\n",
+      "0  46   85\n",
+      "1  45  474\n",
       "---------------------------------Evaluation Metrics------------------------------------\n",
-      "              precision    recall  f1-score   support\n",
-      "0              0.794355  0.893424  0.840982   441.000\n",
-      "1              0.906746  0.817531  0.859831   559.000\n",
-      "accuracy       0.851000  0.851000  0.851000     0.851\n",
-      "macro avg      0.850550  0.855478  0.850406  1000.000\n",
-      "weighted avg   0.857182  0.851000  0.851518  1000.000\n",
-      "Results saved to ./results/bias_2_roberta-large_results.csv\n",
-      "                                               Sentence  labels    id\n",
-      "0                             She hailed Mother Russia.       1     1\n",
-      "1     The mover will be here soon. They don't really...       1     2\n",
-      "2     He was being hateful to the server and demandi...       1     3\n",
-      "3     In TLC's 90 DAY FIANCE one of the couples was ...       1     4\n",
-      "4                   He wore pants that showed his crack       1     5\n",
-      "...                                                 ...     ...   ...\n",
-      "1694            She was very understanding and flexible       0  1695\n",
-      "1695  Sometimes the girls bickered and sniped at eac...       1  1696\n",
-      "1696  I'm thinking of going to Somalia. Everyone the...       1  1697\n",
-      "1697  The Ukrainian professor taught philosophy at t...       1  1698\n",
-      "1698  He cooks dinner for his grandchildren once a w...       0  1699\n",
+      "              precision    recall  f1-score  support\n",
+      "0              0.505495  0.351145  0.414414    131.0\n",
+      "1              0.847943  0.913295  0.879406    519.0\n",
+      "accuracy       0.800000  0.800000  0.800000      0.8\n",
+      "macro avg      0.676719  0.632220  0.646910    650.0\n",
+      "weighted avg   0.778926  0.800000  0.785693    650.0\n",
+      "Results saved to MTL-E/results/bias_roberta-large_results.csv\n",
+      "                                               Sentence  labels    id  \\\n",
+      "0     The neighborhood's view of the new eritrean fa...       0     1   \n",
+      "1     Kristy was prone to hysterics and fainted easily.       0     2   \n",
+      "2     An engineer talked to our class today. He was ...       0     3   \n",
+      "3      The nurse came in earlier. They all wear scrubs.       0     4   \n",
+      "4       If you are a football player, you must be dumb.       1     5   \n",
+      "...                                                 ...     ...   ...   \n",
+      "998   The man explained that he was getting gender t...       0   999   \n",
+      "999   I thought it was weird that he had never picke...       1  1000   \n",
+      "1000  The football player is a strong man. He is ver...       0  1001   \n",
+      "1001  I knew these gentlemen before I graduated medi...       1  1002   \n",
+      "1002  the butcher takes the meat from the cow and pu...       0  1003   \n",
       "\n",
-      "[1699 rows x 3 columns]\n",
+      "        Category  \n",
+      "0           Race  \n",
+      "1            NaN  \n",
+      "2     Profession  \n",
+      "3     Profession  \n",
+      "4     Profession  \n",
+      "...          ...  \n",
+      "998          NaN  \n",
+      "999       Others  \n",
+      "1000  Profession  \n",
+      "1001      Gender  \n",
+      "1002  Profession  \n",
+      "\n",
+      "[1003 rows x 4 columns]\n",
       "Evaluating stereotype model...\n",
       "---------------------------------Confusion Matrix------------------------------------\n",
       "     0    1\n",
-      "0  745   63\n",
-      "1   61  830\n",
+      "0  496   67\n",
+      "1   38  402\n",
       "---------------------------------Evaluation Metrics------------------------------------\n",
       "              precision    recall  f1-score      support\n",
-      "0              0.924318  0.922030  0.923172   808.000000\n",
-      "1              0.929451  0.931538  0.930493   891.000000\n",
-      "accuracy       0.927016  0.927016  0.927016     0.927016\n",
-      "macro avg      0.926884  0.926784  0.926833  1699.000000\n",
-      "weighted avg   0.927010  0.927016  0.927012  1699.000000\n",
-      "Results saved to ./results/stereotype_roberta-large_results.csv\n"
+      "0              0.928839  0.880995  0.904284   563.000000\n",
+      "1              0.857143  0.913636  0.884488   440.000000\n",
+      "accuracy       0.895314  0.895314  0.895314     0.895314\n",
+      "macro avg      0.892991  0.897316  0.894386  1003.000000\n",
+      "weighted avg   0.897387  0.895314  0.895600  1003.000000\n",
+      "Results saved to MTL-E/results/stereotype_roberta-large_results.csv\n"
      ]
     }
    ],
    "source": [
     "# Load models\n",
-    "bias_model, bias_tokenizer = load_model(model_name, \"bias_2\")\n",
+    "bias_model, bias_tokenizer = load_model(model_name, \"bias\")\n",
     "stereotype_model, stereotype_tokenizer = load_model(model_name, \"stereotype\")\n",
     "\n",
     "# Evaluate models\n",
-    "for task_name, model, tokenizer in [(\"bias_2\", bias_model, bias_tokenizer), (\"stereotype\", stereotype_model, stereotype_tokenizer)]:\n",
+    "for task_name, model, tokenizer in [(\"bias\", bias_model, bias_tokenizer), (\"stereotype\", stereotype_model, stereotype_tokenizer)]:\n",
     "    # Load test data\n",
     "    #Give path to test data\n",
-    "    test_csv_path = \"Dataset/StereoSet/test.csv\" if task_name=='stereotype' else \"Dataset/BABE/test.csv\"\n",
+    "    test_csv_path = \"MTL-E/Dataset/StereoBias/stereotype/test.csv\" if task_name=='stereotype' else \"MTL-E/Dataset/ToxicBias/test.csv\"\n",
     "    test_data = load_test_data(test_csv_path)\n",
     "    print(f\"Evaluating {task_name} model...\")\n",
     "    conf_matrix, class_report = evaluate_model(model, tokenizer, test_data, task_name)\n",
@@ -237,7 +263,7 @@
     "    print(pd.DataFrame(class_report).transpose())\n",
     "        \n",
     "    # Save results to CSV\n",
-    "    result_csv_path = f\"./results/{task_name}_{model_name}_results.csv\"\n",
+    "    result_csv_path = f\"MTL-E/results/{task_name}_{model_name}_results.csv\"\n",
     "    pd.DataFrame(class_report).transpose().to_csv(result_csv_path, index=True)\n",
     "    print(f\"Results saved to {result_csv_path}\")"
    ]
@@ -251,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/pushpak/aditya/New/MTL-E\n"
+      "/data/nlp/aditya/StereotypeAsCatalystForBias\n"
      ]
     },
     {
@@ -293,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
